Began HTML/CSS implementation of tutorial screen for voice commands

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
             What are we baking today?
 <p></p>
                 <input type="text" id="webpage" placeholder="What do you want to bake?"> 
-                <button id="readTest">Read</button>
                 <button id="letsGoButton">Search</button>
         </div>
 
@@ -61,7 +60,9 @@
             <button id="lockedAndLoadedButton">Go To Instructions</button>
         </div>
 
-        
+        <div id="informationPanel" class="informationPanel">Use the voice commands<br> "Back",<br> "Repeat",<br> and<br> "Next"<br> to move through the steps of the recipe!
+            <button id="exitInfoPanel" class="exitInfoPanel">x</button>
+        </div>
 
         <div id = "instructions" class="instructions">
             <div id = "instructionsText">
