--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="sayMore" id="sayMore"><p></p>As a baker and a coder, I know a thing or two about getting butter and flour all over your tech. 
             That's why I created No Hands Baking, a tool which responds to voice commands and 
             reads recipes to you while you're sifting, and rolling, and whisking. 
-            so that your hands can stay busy - the right way! <div class="aboutUsExitButton" id="exitAboutUs">x</div></div>
+            so that your hands can stay busy - the right way! <div class="aboutUsExitButton" id="exitAboutUs">x  </div></div>
             
     </div></div>
 
@@ -70,9 +70,9 @@
 
             <button id="backToResults3">Back to Results</button>
             <button id="backToMise">Back to Ingredients</button>
-            <button id="previousStep">Previous</button>
-            <button id="repeatStep">Repeat</button>
-            <button id="nextStep">Next</button>
+            <button id="previousStep" class="instructionManipulationButton">Previous</button>
+            <button id="repeatStep" class="instructionManipulationButton">Repeat</button>
+            <button id="nextStep" class="instructionManipulationButton">Next</button>
             
         </div>
 
