Began implementing instruction options panel

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
 
         <div id = "instructions" class="instructions">
-            <div id = "instructionsText">
+            <div id = "instructionsText" class="instructionsText">
             </div>
 
             <button id="backToResults3">Back to Results</button>
@@ -75,6 +75,15 @@
             <button id="nextStep" class="instructionManipulationButton">Next</button>
             
         </div>
+
+        <div id ="instructionOptionsPanel" class="instructionOptionsPanel">Mute Oration<label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+          Stop Listening<label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label></div>
 
         <script src="index.js"></script>
 </body>
