Uncommited changes at start on Tuesday

--- a/index.html
+++ b/index.html
@@ -60,7 +60,15 @@
             <button id="lockedAndLoadedButton">Go To Instructions</button>
         </div>
 
-        <div id="informationPanel" class="informationPanel">Use the voice commands<br> "Back",<br> "Repeat",<br> and<br> "Next"<br> to move through the steps of the recipe!
+        <div id="informationPanel" class="informationPanel">Use the voice commands<br> "Back",<br> "Repeat",<br> and<br> "Next"<br> to move through the steps of the recipe! <br>
+            Mute Oration<br><label class="switch">
+                <input type="checkbox">
+                <span class="slider round"></span>
+              </label>
+              Stop Listening<label class="switch">
+                <input type="checkbox">
+                <span class="slider round"></span>
+              </label></div>
             <button id="exitInfoPanel" class="exitInfoPanel">x</button>
         </div>
 
@@ -75,15 +83,6 @@
             <button id="nextStep" class="instructionManipulationButton">Next</button>
             
         </div>
-
-        <div id ="instructionOptionsPanel" class="instructionOptionsPanel">Mute Oration<label class="switch">
-            <input type="checkbox">
-            <span class="slider round"></span>
-          </label>
-          Stop Listening<label class="switch">
-            <input type="checkbox">
-            <span class="slider round"></span>
-          </label></div>
 
         <script src="index.js"></script>
 </body>
