Fixed vertical alignment issues on instructions page, and modified instructionExit buttons

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               Stop Listening<label class="switch">
                 <input type="checkbox">
                 <span class="slider round"></span>
-              </label></div>
+              </label>
             <button id="exitInfoPanel" class="exitInfoPanel">x</button>
         </div>
 
@@ -76,12 +76,16 @@
             <div id = "instructionsText" class="instructionsText">
             </div>
 
-            <button id="backToResults3">Back to Results</button>
-            <button id="backToMise">Back to Ingredients</button>
+            <div id="instructionManipulation">
             <button id="previousStep" class="instructionManipulationButton">Previous</button>
             <button id="repeatStep" class="instructionManipulationButton">Repeat</button>
             <button id="nextStep" class="instructionManipulationButton">Next</button>
+            </div>
             
+            <div id="instructionExits" class="instructionExits">
+            <button id="backToMise" class="instructionExitsButtons">&lt;  Back to Ingredients</button>
+            <button id="backToResults3" class="instructionExitsButtons">&lt;  Back to Results</button>
+            </div>
         </div>
 
         <script src="index.js"></script>
