Instruction Animation updated

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
             <button id="lockedAndLoadedButton">Go To Instructions</button>
         </div>
 
-        <div id="informationPanel" class="informationPanel">Use the voice commands<br> "Back",<br> "Repeat",<br> and<br> "Next"<br> to move through the steps of the recipe! <br>
+        <div id="informationPanel" class="informationPanel">Use the voice commands<br><div class="accentText"> "Back",<br> "Repeat",<br></div> and<br><div class="accentText"> "Next"<br></div> to move through the steps of the recipe! <br>
             Mute Oration<br><label class="switch">
                 <input type="checkbox">
                 <span class="slider round"></span>
               </label>
               Stop Listening<label class="switch">
-                <input type="checkbox">
+                <input type="checkbox" checked>
                 <span class="slider round"></span>
               </label>
             <button id="exitInfoPanel" class="exitInfoPanel">x</button>
