Fixed Step handling on Instruction screen

--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
         </div>
 
         <div id="informationPanel" class="informationPanel">Use the voice commands<br><div class="accentText"> "Back",<br> "Repeat",<br></div> and<br><div class="accentText"> "Next"<br></div> to move through the steps of the recipe! <br>
-            Mute Oration<br><label class="switch">
+            <div class="boxContainer"><div class="box">Mute Oration</div><div class="box"><label class="switch">
                 <input type="checkbox">
                 <span class="slider round"></span>
-              </label>
-              Stop Listening<label class="switch">
+              </label></div><div class="box">
+              Stop Listening</div><div class="box"><div><label class="switch">
                 <input type="checkbox" checked>
                 <span class="slider round"></span>
-              </label>
+              </label> </div></div></div>
             <button id="exitInfoPanel" class="exitInfoPanel">x</button>
         </div>
 
