Finished customizing instruction page buttons

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <button id="lockedAndLoadedButton">Go To Instructions</button>
         </div>
 
-        <div id="informationPanel" class="informationPanel">Use the voice commands<br><div class="accentText"> "Back",<br> "Repeat",<br></div> and<br><div class="accentText"> "Next"<br></div> to move through the steps of the recipe! <br>
+        <div id="informationPanel" class="informationPanel"><button id="exitInfoPanel" class="exitInfoPanel">x</button>Use the voice commands<br><div class="accentText"> "Back",<br> "Repeat",<br></div> and<br><div class="accentText"> "Next"<br></div> to move through the steps of the recipe! <br>
             <div class="boxContainer"><div class="box">Mute Oration</div><div class="box"><label class="switch">
                 <input type="checkbox">
                 <span class="slider round"></span>
@@ -69,7 +69,7 @@
                 <input type="checkbox" checked>
                 <span class="slider round"></span>
               </label> </div></div></div>
-            <button id="exitInfoPanel" class="exitInfoPanel">x</button>
+            
         </div>
 
         <div id = "instructions" class="instructions">
