Added settings button

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         </div>
 
         <div id = "instructions" class="instructions">
-            <div id = "instructionsText" class="instructionsText">
-            </div>
+            <button id="instructionSettingsButton"><img id="settingsButton" class="settingsButton" src='https://png.pngtree.com/png-clipart/20190904/original/pngtree-settings-icon-png-image_4491632.jpg'></button>
+            <div id="instructionsText"></div>
 
             <div id="instructionManipulation">
             <button id="previousStep" class="instructionManipulationButton">Previous</button>
