Buttons hover and formatting fixed

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p></p>
             What are we baking today?
 <p></p>
-                <input type="text" id="webpage" placeholder="What do you want to bake?"> 
+                <input type="text" id="webpage" class="enterText" placeholder="What do you want to bake?"> 
                 <button id="letsGoButton">Search</button>
         </div>
 
@@ -56,8 +56,9 @@
             <div id="ingredients">
 
             </div>
-            <button id="backToResults2">Back to Results</button>
-            <button id="lockedAndLoadedButton">Go To Instructions</button>
+            <div class="buttonWrangler">
+            <button id="backToResults2" class="miseOrientationButtons">Back to Results</button>
+            <button id="lockedAndLoadedButton" class="miseOrientationButtons">Go To Instructions</button></div>
         </div>
 
         <div id="informationPanel" class="informationPanel"><button id="exitInfoPanel" class="exitInfoPanel">x</button>Use the voice commands<br><div class="accentText"> "Back",<br> "Repeat",<br></div> and<br><div class="accentText"> "Next"<br></div> to move through the steps of the recipe! <br>
