Added greying to instruction items

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
 
         <div id="informationPanel" class="informationPanel"><button id="exitInfoPanel" class="exitInfoPanel">x</button>Use the voice commands<br><div class="accentText"> "Back",<br> "Repeat",<br></div> and<br><div class="accentText"> "Next"<br></div> to move through the steps of the recipe! <br>
             <div class="boxContainer"><div class="box">Mute Oration</div><div class="box"><label class="switch">
-                <input type="checkbox">
+                <input type="checkbox" id="muteOration">
                 <span class="slider round"></span>
               </label></div><div class="box">
               Stop Listening</div><div class="box"><div><label class="switch">
-                <input type="checkbox" checked>
+                <input type="checkbox" id="pauseMicrophone">
                 <span class="slider round"></span>
               </label> </div></div></div>
             
