Began making mobile fixes for display purposes

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     
 
         <div id="recipeSelector" class="opener">
-            <p></p>
+
             What are we baking today?
-<p></p>
+
                 <input type="text" id="webpage" class="enterText" placeholder="What do you want to bake?"> 
-                <button id="letsGoButton">Search</button>
+                <button id="letsGoButton" class="letsGoButton"> Search </button>
         </div>
 
         <div id="recipeSelectionScreen" class="recipeSelectionScreen">
