Fixed About Us Animation for Mobile

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             What are we baking today?
 
                 <input type="text" id="webpage" class="enterText" placeholder="What do you want to bake?"> 
-                <button id="letsGoButton" class="letsGoButton"> Search </button>
+                <button id="letsGoButton" class="letsGoButton"onclick="document.body.style.cursor='wait'; return true;"> Search </button>
         </div>
 
         <div id="recipeSelectionScreen" class="recipeSelectionScreen">
