--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     
 
+    <div id="errorPanel" class="informationPanel"></div>
         <div id="recipeSelector" class="opener">
 
             What are we baking today?
