Fixed cursor and some spacing issues on the instructions page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <button id="selectRecipe">Let's Bake!</button>
         </div>
 
-        <div id = "miseEnPlace" class="miseEnPlace" value="">
+        <div id = "miseEnPlace" class="miseEnPlace" value=""><h3>Prepare your Mise En Place!</h3>
             <div id="ingredients">
 
             </div>
