Made adjustments to Read More page formatting

--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
             <div class="columnPreview" id="ingredientsPreview"></div>
             <div class="columnPreview" id="instructionsPreview"></div>
         </div>
+        <div class="buttonWrangler">
         <button id="backToResults">Back to Results</button>
         <button id="selectRecipe">Let's Bake!</button>
+        </div>
         </div>
 
         <div id = "miseEnPlace" class="miseEnPlace" value=""><h3>Prepare your Mise En Place!</h3>
