--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>No Hands Baking!</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
     </head>
 
     <body>
@@ -16,7 +17,7 @@
             <div class="sayMore" id="sayMore"><p></p>As a baker and a coder, I know a thing or two about getting butter and flour all over your tech. 
             That's why I created No Hands Baking, a tool which responds to voice commands and 
             reads recipes to you while you're sifting, and rolling, and whisking. 
-            so that your hands can stay busy - the right way! <div class="aboutUsExitButton" id="exitAboutUs">x  </div></div>
+            so that your hands can stay busy - the right way! <button class="aboutUsExitButton" id="exitAboutUs"><p>x  </div></div>
             
     </div></div>
 
