Added LinkedIn and Git links to About Us section

--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
         <h1 id="recipeTitle" class="recipeTitle">No Hands Baking!</h1></div>
     <p></p>
     <div class="footer" id="footer"><div id="aboutUs" class="aboutUs">
-    <button class="aboutUsButton" id="aboutUsButton">No Hands Baking</button><br>
+    <button class="aboutUsButton" id="aboutUsButton">No Hands Baking</button>        <button class="aboutUsExitButton" id="exitAboutUs">x</button>  
+
             <div class="sayMore" id="sayMore"><p></p>As a baker and a coder, I know a thing or two about getting butter and flour all over your tech. 
             That's why I created No Hands Baking, a tool which responds to voice commands and 
             reads recipes to you while you're sifting, and rolling, and whisking. 
-            so that your hands can stay busy - the right way! <button class="aboutUsExitButton" id="exitAboutUs"><p>x  </div></div>
+            so that your hands can stay busy - the right way!<p></p> 
+            <button id="gitButton" class="backToHome"onclick=" window.open('https://github.com/mpartificer','_blank')"><img id="gitImage" class="socialButtons" src='https://cdn-icons-png.flaticon.com/512/25/25231.png'></button>
+            <button id="linkedInButton" class="backToHome"onclick=" window.open('http://linkedin.com/in/meganforsey','_blank')"><img id="linkedInImage" class="socialButtons" src='https://cdn.icon-icons.com/icons2/2428/PNG/512/linkedin_black_logo_icon_147114.png'></button>
+
+        </div></div>
             
     </div></div>
 
@@ -33,7 +38,7 @@
         </div>
 
         <div id="recipeSelectionScreen" class="recipeSelectionScreen">
-
+            Showing results for "<div id="searchTerm" class="searchTerm"></div>"
             <div class="wrapper" id="wrapper">
             </div>
 <p>
