Removed Mise En Place screen and patched together the app flow so it works, although is not pretty

--- a/index.html
+++ b/index.html
@@ -61,13 +61,14 @@
         </div>
         </div>
 
-        <div id = "miseEnPlace" class="miseEnPlace" value=""><h3>Prepare your Mise En Place!</h3>
+        <div id = "miseEnPlace" class="informationPanel"><h3>Prepare your Ingredients before moving on!</h3>
+            <button id="lockedAndLoadedButton" class="miseOrientationButtons">Go To Instructions</button>
             <div id="ingredients">
 
             </div>
             <div class="buttonWrangler">
             <button id="backToResults2" class="miseOrientationButtons">Back to Results</button>
-            <button id="lockedAndLoadedButton" class="miseOrientationButtons">Go To Instructions</button></div>
+            </div>
         </div>
 
         <div id="informationPanel" class="informationPanel"><button id="exitInfoPanel" class="exitInfoPanel">x</button>Use the voice commands<br><div class="accentText"> "Back",<br> "Repeat",<br></div> and<br><div class="accentText"> "Next"<br></div> to move through the steps of the recipe! <br>
