Fixed About Us Animations
Co-authored-by: Jillian Breau <jillianSylvera@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
             
             <div id="instructionExits" class="instructionExits">
-            <button id="backToMise" class="instructionExitsButtons">&lt;  Back to Ingredients</button>
+            <button id="backToMise" class="instructionExitsButtons">&lt;  Back to Preview</button>
             <button id="backToResults3" class="instructionExitsButtons">&lt;  Back to Results</button>
             </div>
         </div>
