--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <button id="backToHome" class="backToHome"><img id="homeButton" class="homeButton" src='https://static.thenounproject.com/png/5566533-200.png'></button>
         <h1 id="recipeTitle" class="recipeTitle">No Hands Baking!</h1></div>
     <p></p>
-    <div class="footer" id="footer"><div id="aboutUs" class="aboutUs">
-    <button class="aboutUsButton" id="aboutUsButton">No Hands Baking</button>        <button class="aboutUsExitButton" id="exitAboutUs">x</button>  
+    <div class="footer" id="footer"><div id="aboutUs" class="aboutUs"><div id="aboutUsButtonBox" class="aboutUsButtonBox">
+    <button class="aboutUsButton" id="aboutUsButton">No Hands Baking</button>        <button class="aboutUsExitButton" id="exitAboutUs">x</button></div>  
 
             <div class="sayMore" id="sayMore"><p></p>As a baker and a coder, I know a thing or two about getting butter and flour all over your tech. 
             That's why I created No Hands Baking, a tool which responds to voice commands and 
