Post-coaching session commit. Stomped some bugs, fixed muting problems, preliminary investigation into what is going on with error handling.
Co-authored-by: Jillian Breau (she/her) <jillianbreau@gmail.com>

--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
         Showing results for "<div id="searchTerm" class="searchTerm"></div>"
         <div class="wrapper" id="wrapper">
         </div>
-        <p>
         <div class="alignPageInfo">
             <button id="previousPage" class="pageButtons">Previous Page</button>
             <div id="selectorPageTracker" class="pageCounter"></div>
@@ -84,7 +83,7 @@
             <div class="box">Mute Oration</div>
             <div class="box">
                 <label for="muteOration" class="switch">
-                <input type="checkbox" id="muteOration" onclick="checkVoice">
+                <input type="checkbox" id="muteOration" onclick="checkVoice()">
                 <span class="slider round"></span>
                 </label>
             </div>
@@ -93,7 +92,7 @@
             </div>
             <div class="box">
                 <label for="pauseMicrophone" class="switch">
-                <input type="checkbox" id="pauseMicrophone" onclick="checkMicrophone">
+                <input type="checkbox" id="pauseMicrophone" onclick="checkMicrophone()">
                 <span class="slider round">
                 </span>
                 </label>
