Added titles to mise and instruction page

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
         
     <div class="recipePreview" id="recipePreview">
         <div class="backButtonAlign">
-        <button id="backToResults" class="backButton">Back to Results</button></div>
+            <button id="backToResults" class="backButton">Back to Results</button>
+            <div class="recipePreviewTitle" id="recipePreviewTitle"></div>
+        </div>
         <div class="rowPreview">
             <div class="imageColumn" id="imagePreview"></div>
             <div class="columnPreview" id="ingredientsPreview"></div>
@@ -106,7 +108,7 @@
                 <button id="backToMise" class="instructionExitsButtons">&lt;  Back to Preview</button>
                 <button id="backToResults3" class="instructionExitsButtons">&lt;  Back to Results</button>
             </div>
-            <div class="titleContainer">
+            <div id="titleContainer" class="titleContainer">
                 <div class="recipeTitle" id="recipeTitle"></div>
                 <div class="instructionTitle"><b>Instructions</b></div>
             </div>
