Attempted carousel installation and hated it, also some layout changes have made the different categories more visible in mobile mode so I'm scrapping it.

--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@
             <div class="backButtonBox">
                 <button id="backToResults" class="backButton">Back to Results</button>
             </div>
-            <div class="recipePreviewTitle" id="recipePreviewTitle"></div>
-            <div class="balanceLine">
-            </div>
+        <div class="recipePreviewTitle" id="recipePreviewTitle"></div>
+        <div class="balanceLine"></div>
         </div>
         <div class="rowPreview">
             <div class="imageColumn" id="imagePreview"></div>
