Exit Mise Preparation warning added

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     </div>
 
     <div id = "miseEnPlace" class="informationPanel">
+        <button id="exitMisePanel" class="exitInfoPanel">x</button>
         <h3>Prepare your Ingredients before moving on!</h3>
         <button id="lockedAndLoadedButton" class="miseOrientationButtons">Go To Instructions</button>
     </div>
