Added disabled for searching button on empty values, fixed animation for previous instructions, fixed hover on social buttons (almost), made aboutUs text perceivable, and fixed homeButton positioning on mobile

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div id="recipeSelector" class="opener">
         What are we baking today?
         <input type="text" id="webpage" class="enterText" placeholder="What do you want to bake?"> 
-        <button id="letsGoButton" onclick="document.body.style.cursor='wait'; return true;"> Search </button>
+        <button id="letsGoButton" onclick="document.body.style.cursor='wait'; return true;" disabled> Search </button>
     </div>
 
     <div id="recipeSelectionScreen" class="recipeSelectionScreen">
@@ -133,7 +133,7 @@
         <div id="instructionsText" class="instructionsText"></div>
 
         <div id="instructionManipulation">
-            <button id="previousStep" class="instructionManipulationButton">Previous</button>
+            <button id="previousStep" class="instructionManipulationButton">Back</button>
             <button id="repeatStep" class="instructionManipulationButton">Repeat</button>
             <button id="nextStep" class="instructionManipulationButton">Next</button>
         </div> 
