--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
         <meta property="og:title" content="No Hands Baking!" />
-        <meta property=”og:image” content=”https://github.com/mpartificer/NoHandsBaking/NHBMetaImg.png” />
-        <meta property=”og:description” content=”Keep your hands busy whisking and stirring and kneading with this speech-to-text and voice command based kitchen assistant. We&#8217;ll read your recipe, you just make it!” />
+        <meta property='og:image' content='https://github.com/mpartificer/NoHandsBaking/NHBMetaImg.png' />
+        <meta property='og:description' content='Keep your hands busy whisking and stirring and kneading with this speech-to-text and voice command based kitchen assistant. We&#8217;ll read your recipe, you just make it!' />
+        <meta property="og:type" content="website">
     </head>
 
     <body>
