Fixed social button hovering

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                 As a baker and a coder, I know a thing or two about getting butter and flour all over your tech. 
                 That's why I created No Hands Baking, a tool which responds to voice commands and 
                 reads recipes to you while you're sifting, and rolling, and whisking. 
-                so that your hands can stay busy - the right way!
+                So that your hands can stay busy - the right way!
                 <p></p> 
-                <button id="gitButton" class="backToHome" onclick=" window.open('https://github.com/mpartificer','_blank')"><img id="gitImage" class="socialButtons" src='https://cdn-icons-png.flaticon.com/512/25/25231.png'></button>
-                <button id="linkedInButton" class="backToHome" onclick=" window.open('http://linkedin.com/in/meganforsey','_blank')"><img id="linkedInImage" class="socialButtons" src='https://cdn.icon-icons.com/icons2/2428/PNG/512/linkedin_black_logo_icon_147114.png'></button>
+                <button id="gitButton" class="socialLinks" onclick=" window.open('https://github.com/mpartificer','_blank')"><img id="gitImage" class="socialButtons" src='https://cdn-icons-png.flaticon.com/512/25/25231.png'></button>
+                <button id="linkedInButton" class="socialLinks" onclick=" window.open('http://linkedin.com/in/meganforsey','_blank')"><img id="linkedInImage" class="socialButtons" src='https://cdn.icon-icons.com/icons2/2428/PNG/512/linkedin_black_logo_icon_147114.png'></button>
             </div>
         </div>
             
