Fixed search box overcrowding, still trying to fix unclickable buttons on mobile

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div id="recipeSelector" class="opener"><br><br>
         What are we baking today?
         <input type="text" id="webpage" class="enterText" placeholder="What do you want to bake?"> 
-        <button id="letsGoButton" onclick="document.body.style.cursor='wait'; return true;"> Search </button>
+        <button id="letsGoButton" type="button" onclick="document.body.style.cursor='wait'; return true;"> Search </button>
     </div>
 
     <div id="recipeSelectionScreen" class="recipeSelectionScreen">
