please feel something

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>No Hands Baking!</title>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+        <!-- <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" /> -->
         <meta property="og:title" content="No Hands Baking!" />
         <meta property='og:image' content='NHBMetaImg.png' />
         <meta property='og:description' content='Keep your hands busy whisking and stirring and kneading with this speech-to-text and voice command based kitchen assistant. We&#8217;ll read your recipe, you just make it!' />
