Stopped storing cache for easier testing

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <meta property='og:image' content='NHBMetaImg.png' />
         <meta property='og:description' content='Keep your hands busy whisking and stirring and kneading with this speech-to-text and voice command based kitchen assistant. We&#8217;ll read your recipe, you just make it!' />
         <meta property="og:type" content="website">
+        <meta http-equiv='cache-control' content='no-cache'> 
+        <meta http-equiv='expires' content='0'> 
+        <meta http-equiv='pragma' content='no-cache'>
     </head>
 
     <body id="myBody">
