Making some edits to make it comaptible for both options

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>No Hands Baking!</title>
+        <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/184/184490.png">
         <link rel="stylesheet" type="text/css" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
         <meta property="og:title" content="No Hands Baking!" />
