Fixing blue footer and hello in search bar

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="recipeSelector" class="opener"><br><br>
         What are we baking today?
         <input type="text" id="webpage" class="enterText" placeholder="What do you want to bake?"> 
-        <button id="letsGoButton" type="button"> hello search </button>
+        <button id="letsGoButton" type="button"> Search </button>
     </div>
 
     <div id="recipeSelectionScreen" class="recipeSelectionScreen">
