--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>No Hands Baking!</title>
         <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/184/184490.png">
         <link rel="stylesheet" type="text/css" href="style.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0" />
         <meta property="og:title" content="No Hands Baking!" />
         <meta property='og:image' content='NHBMetaImg.png' />
         <meta property='og:description' content='Keep your hands busy whisking and stirring and kneading with this speech-to-text and voice command based kitchen assistant. We&#8217;ll read your recipe, you just make it!' />
