Added additional outer div to fix issues with the ingredient panel exit button

--- a/index.html
+++ b/index.html
@@ -113,8 +113,10 @@
     </div>
 
     <div id="ingredientReminderPanel" class="informationPanel">
-        <button id="exitIngRemPanel" class="exitInfoPanel">x</button>
-        <div id="ingredientInsert"></div>
+        <div class="innerDiv">
+            <button id="exitIngRemPanel" class="exitInfoPanel">x</button>
+            <div id="ingredientInsert" class="ingredientInsert"></div>
+        </div>
     </div>
 
     <div id = "instructions" class="instructions">
